--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Progress</title>
+    <title>Split page</title>
 </head>
 <body>
    <div class='page__container'>
-      
+      <div class='left'>
+        <button class="button">Buy now</button>
+      </div>
+      <div class='right'>
+        <button class="button">Buy now</button>
+      </div>
     </div>
     <script src='index.js'></script>
 </body>
